added more end points

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "idnan/tevo",
   "description": "A command line utility to get trending movies/tv series and lot more...",
   "require": {
+    "guzzlehttp/guzzle": "~6.0",
     "pear/console_table": "^1.3"
   },
   "authors": [
