--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
   "description": "A command line utility to get trending movies/tv series and lot more...",
   "require": {
     "guzzlehttp/guzzle": "~6.0",
-    "pear/console_table": "^1.3"
+    "pear/console_table": "^1.3",
+    "kevinlebrun/colors.php": "0.*"
   },
   "authors": [
     {
